chore: update pom.xml to support headless test execution on CI